# gdextension-acrylic-window

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
demo/: icon.svg.import  main.gd  main.tscn  node_2d.tscn  project.godot
demo/addons/acrylic-window/: acrylic_theme.tres
demo/addons/acrylic-window/scenes/: acrylic_main.gd.uid  acrylic_main.tscn  acrylic_settings.gd  acrylic_settings.gd.uid  acrylic_settings.tscn  acrylic_title_bar.gd  acrylic_title_bar.gd.uid  acrylic_title_bar.tscn  acrylic_title_bar_prototype.gd  acrylic_title_bar_prototype.tscn
src/: acrylic_window.cpp  acrylic_window.h  acrylic_window.hpp  helpers.cpp  helpers.h  helpers.hpp  native_window.hpp  native_window_base.cpp  native_window_base.hpp  native_window_windows.cpp  native_window_windows.hpp  register_types.cpp  register_types.hpp  scrollable_option_button.cpp  scrollable_option_button.hpp  switch_tween.cpp  switch_tween.hpp
